<?xml version="1.0" encoding="utf-8"?>
<!--
    Dialog layout for changing default language.
    Includes a header, language options, confirmation button, and restart info.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/style_dialogs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UseAppTint,UseCompatTextViewDrawableXml">

    <!-- Card container for elevated surface with rounded corners -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_5"
        android:layout_marginTop="@dimen/_10"
        android:layout_marginEnd="@dimen/_5"
        android:layout_marginBottom="@dimen/_10"
        app:cardBackgroundColor="@color/color_surface"
        app:cardCornerRadius="@dimen/_10"
        app:cardElevation="@dimen/_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Dialog title section with primary background -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_primary"
                android:orientation="vertical">

                <!-- Title text -->
                <TextView
                    android:id="@+id/txt_dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10"
                    android:ellipsize="end"
                    android:fontFamily="@font/sans_font_bold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/change_default_language"
                    android:textColor="@color/color_on_primary"
                    android:textSize="@dimen/normal_text_size" />
            </LinearLayout>

            <!-- Scrollable section for radio button language options -->
            <ScrollView
                android:id="@+id/languages_section"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- RadioGroup to hold available language options -->
                    <RadioGroup
                        android:id="@+id/language_options_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15"
                        android:layout_marginTop="@dimen/_10"
                        android:layout_marginEnd="@dimen/_15"
                        android:layout_marginBottom="@dimen/_5"
                        android:background="@drawable/btn_selector_trans_dark"
                        android:orientation="vertical"
                        android:textSize="@dimen/normal_text_size" />
                </LinearLayout>
            </ScrollView>

            <!-- Confirmation button (Apply Changes) -->
            <RelativeLayout
                android:id="@+id/btn_positive_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15"
                android:layout_marginTop="@dimen/_5"
                android:layout_marginEnd="@dimen/_15"
                android:layout_marginBottom="@dimen/_5"
                android:background="@drawable/btn_selector_solid"
                android:clickable="true"
                android:elevation="@dimen/_1"
                tools:ignore="TouchTargetSizeCheck">

                <!-- Button label with check icon -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/_8"
                    android:drawableStart="@drawable/ic_checked"
                    android:drawablePadding="@dimen/_5"
                    android:drawableTint="@color/color_on_secondary"
                    android:fontFamily="@font/sans_font_medium"
                    android:gravity="center"
                    android:text="@string/apply_changes"
                    android:textColor="@color/color_on_secondary"
                    android:textSize="@dimen/normal_text_size" />
            </RelativeLayout>

            <!-- Info text showing restart note -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_15"
                android:layout_marginTop="@dimen/_2"
                android:layout_marginEnd="@dimen/_15"
                android:layout_marginBottom="@dimen/_8"
                android:fontFamily="@font/sans_font_regular"
                android:text="@string/app_will_restart_to_take_effect"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/small_text_size"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>