<?xml version="1.0" encoding="utf-8"?>
<!--
  ================================================
  CUSTOM DIALOG LAYOUT FOR VIDEOMATE
  Features:
  - Material-style CardView with rounded corners
  - Title bar with dynamic text
  - Scrollable message area
  - Dual-action buttons (Cancel/OK)
  - Responsive design using weight for button distribution
  ================================================
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/style_dialogs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UseAppTint,UseCompatTextViewDrawableXml">

    <!--
      Primary container with Material Card styling
      - Margins: 5dp horizontal, 10dp vertical
      - Elevation: 5dp shadow
      - Corner radius: 10dp
    -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5"
        android:layout_marginTop="@dimen/_10"
        android:layout_marginEnd="@dimen/_5"
        android:layout_marginBottom="@dimen/_10"
        app:cardBackgroundColor="@color/color_surface"
        app:cardCornerRadius="@dimen/_10"
        app:cardElevation="@dimen/_5">

        <!-- Vertical container for dialog content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--
              TITLE SECTION
              - Background: Primary brand color
              - Centered bold text with ellipsis for overflow
            -->
            <LinearLayout
                android:id="@+id/dialog_title_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_primary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10"
                    android:ellipsize="end"
                    android:fontFamily="@font/sans_font_bold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/sample_text_here"
                    android:textColor="@color/color_on_primary"
                    android:textSize="@dimen/normal_text_size" />
            </LinearLayout>

            <!--
              SCROLLABLE MESSAGE AREA
              - Uses weight to fill available space
              - Auto-links URLs in text
              - 10dp horizontal margins
            -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_10"
                android:layout_marginTop="@dimen/_8"
                android:layout_marginEnd="@dimen/_10"
                android:layout_marginBottom="@dimen/_8"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txt_dialog_message"
                    style="@style/style_dialogs.message"
                    android:layout_marginStart="@dimen/_10"
                    android:layout_marginTop="@dimen/_0"
                    android:layout_marginEnd="@dimen/_10"
                    android:layout_marginBottom="@dimen/_0"
                    android:autoLink="web"
                    android:text="@string/sample_text_here"
                    android:textSize="@dimen/message_text_size" />
            </ScrollView>

            <!--
              BUTTON ROW
              - Horizontal layout with 40%/60% weight distribution
              - 15dp margins between buttons
              - Selector backgrounds for pressed states
            -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <!-- Cancel Button (40% width) -->
                <RelativeLayout
                    android:id="@+id/btn_dialog_negative_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15"
                    android:layout_marginTop="@dimen/_5"
                    android:layout_marginEnd="@dimen/_15"
                    android:layout_marginBottom="@dimen/_5"
                    android:layout_weight=".4"
                    android:background="@drawable/btn_selector_solid_trans"
                    android:clickable="true"
                    tools:ignore="TouchTargetSizeCheck">

                    <TextView
                        android:id="@+id/btn_dialog_negative"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/_8"
                        android:drawableStart="@drawable/ic_cancel"
                        android:drawablePadding="@dimen/_5"
                        android:drawableTint="@color/color_text_primary"
                        android:ellipsize="end"
                        android:fontFamily="@font/sans_font_regular"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/title_cancel"
                        android:textColor="@color/color_text_primary"
                        android:textSize="@dimen/normal_text_size" />
                </RelativeLayout>

                <!-- Confirm Button (60% width, elevated) -->
                <RelativeLayout
                    android:id="@+id/btn_dialog_positive_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15"
                    android:layout_marginTop="@dimen/_5"
                    android:layout_marginEnd="@dimen/_15"
                    android:layout_marginBottom="@dimen/_5"
                    android:layout_weight=".6"
                    android:background="@drawable/btn_selector_solid"
                    android:clickable="true"
                    android:elevation="@dimen/_1"
                    tools:ignore="TouchTargetSizeCheck">

                    <TextView
                        android:id="@+id/btn_dialog_positive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/_8"
                        android:drawableStart="@drawable/ic_checkmark"
                        android:drawablePadding="@dimen/_5"
                        android:drawableTint="@color/color_background"
                        android:ellipsize="end"
                        android:fontFamily="@font/sans_font_medium"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/title_okay"
                        android:textColor="@color/color_on_secondary"
                        android:textSize="@dimen/normal_text_size" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>